infra/cilium/components/gateway-extra/gateway-extra.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${CILIUM_GATEWAY_EXTRA_NAME:-cilium-gateway-extra}
  namespace: ${CILIUM_GATEWAY_EXTRA_NAMESPACE:-default}
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "${CILIUM_GATEWAY_EXTRA_IP:-0.0.0.0}"
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${CILIUM_GATEWAY_EXTRA_DOMAIN:-set-CILIUM_GATEWAY_EXTRA_DOMAIN.invalid}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: ${CILIUM_GATEWAY_EXTRA_TLS_SECRET:-cilium-gateway-extra-tls}
      allowedRoutes:
        namespaces:
          from: All
